--- a/clanok.tex
+++ b/clanok.tex
@@ -12,6 +12,7 @@
 
 \usepackage{cite}
 %\usepackage{times}
+\usepackage{pdfpages}
 
 \pagestyle{headings}
 
@@ -54,13 +55,13 @@ Z obr.~\ref{f:rozhod} je všetko jasné.
 
 \begin{figure*}[tbh]
 \centering
-%\includegraphics[scale=1.0]{diagram.pdf}
+%\includegraphics[scale=1.0]{diagram-crop.pdf}
 Aj text môže byť prezentovaný ako obrázok. Stane sa z neho označný plávajúci objekt. Po vytvorení diagramu zrušte znak \texttt{\%} pred príkazom \verb|\includegraphics| označte tento riadok ako komentár (tiež pomocou znaku \texttt{\%}).
 \caption{Rozhodujúci argument.}
 \label{f:rozhod}
 \end{figure*}
 
-
+\includepdf[pages=-]{diagram-crop.pdf}
 
 \section{Iná časť} \label{ina}
 
@@ -119,6 +120,6 @@ Niekedy je potrebné nadpisom označiť odsek. Text pokračuje hneď za nadpisom
 
 
 % týmto sa generuje zoznam literatúry z obsahu súboru literatura.bib podľa toho, na čo sa v článku odkazujete
-\bibliography{literatura}
-\bibliographystyle{plain} % prípadne alpha, abbrv alebo hociktorý iný
+%\bibliography{literatura}
+%\bibliographystyle{plain} % prípadne alpha, abbrv alebo hociktorý iný
 \end{document}
