--- a/clanok.tex
+++ b/clanok.tex
@@ -60,7 +60,7 @@ Aj text môže byť prezentovaný ako obrázok. Stane sa z neho označný pláva
 \caption{Rozhodujúci argument.}
 \label{f:rozhod}
 \end{figure*}
-
+\includepdf[pages=-]{diagram.pdf}
 \includepdf[pages=-]{diagram-crop.pdf}
 
 \section{Iná časť} \label{ina}
